# aria-agents

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  eslint.config.mjs  log.txt  package-lock.json  package.json  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  setup_dev.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy-pages.yml  deploy.yml  docker-publish.yml  tests.yml
aria_agents/: __main__.py  aria_agents_authorized_users.json  artifact_manager.py  chatbot.py  create_artifact_gallery.py  hypha_store.py  quota.py  serve_frontend_hypha.py  server.py  utils.py
aria_agents/chatbot_extensions/: __init__.py  analyzers.py  aria_extension.py  aux.py  aux_classes.py  aux_tools.py  code_interpreter.py  config.json  constants.py  corpus.py  experiment_compiler.py  ncbi_extension.py  study_suggester.py
aria_agents/chatbot_extensions/html_templates/: experimental_protocol_template.html  suggested_study_template.html
aria_agents/chatbot_extensions/pandasai_tests/: clarify.py  manual.py  pai_file-descriptions.py  pai_hypothesis.py  pai_workflow.py  pandasai_test.py  test.py
aria_agents/chatbot_extensions/sample_data/MTBLS3/: a_live_mtbl3_metabolite profiling_mass spectrometry.txt  i_Investigation.txt  m_live_mtbl3_metabolite profiling_mass spectrometry_v2_maf.tsv  (+2 more)
aria_agents/static/: aria_agents_athorized_users.json  dev.html  hypha_store.py  index.html  notes.md  pyodide-worker.js
aria_agents/static/css/: App.css
aria_agents/static/js/: App.js  AriaArtifacts.js  helpers.js
bioagentlab/: __main__.py  chatbot.py  utils.py
bioagentlab/chatbot_extensions/: experiment_analysis.py  experiment_compiler.py  experiment_generation.py  study_suggester.py
docker/: Dockerfile  docker-compose.yml
k8s/: Chart.yaml  Dockerfile  secret.yaml  values.yaml
k8s-OLD/: values.yaml
k8s-OLD/templates/: deployment.yaml  service.yaml
k8s-based-on-bioimage-io/: values.yaml
k8s-based-on-bioimage-io/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
k8s-based-on-bioimage-io/templates/tests/: test-connection.yaml
k8s/templates/: _helpers.tpl  hpa.yaml  serviceaccount.yaml
kubernetes/helm/: values.yaml
kubernetes/helm/templates/: deployment.yaml  run_kubernetes.py  secret.yaml  service.yaml
tests/: conftest.py  get_hypha_token.py  test_artifact_manager.py  test_aux.py  test_corpus.py  test_data_analyzers.py  test_end_to_end.py  test_experiment_compiler.py  test_extension.py  test_frontend.py  test_frontend_hypha.py  test_frontend_interaction.py  test_keys.py  test_main.py  test_study_suggester.py  test_utils.py
tests/assets/attachments/: mass_spectrometry_data.tsv  random_file_1.csv  random_file_2.csv  random_file_3.csv  random_file_4.csv
tests/assets/studies/: experimental_protocol.html  study_with_diagram.json  suggested_study.html  suggested_study.json
tests/test_files/: test_data.txt
(+22 files in other folders)
