[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "aria-agents"
version = "0.1.0"
readme = "README.md"
description = "Empowering autonomous scientific discovery."
dependencies = [
  "schema-agents>=0.1.50",
  "imjoy-rpc>=0.5.48.post2",
  "requests",
  "pypdf",
  "pillow",
  "matplotlib",
  "hypha>=0.20.47.post1",
  "tqdm",
  "aiofiles",
  "langchain>=0.1.6",
  "beautifulsoup4",
  "pandas",
  # "duckduckgo-search>=5.1.0",
  "rank-bm25",
  "langchain-openai",
  "langchain-core>=0.1.31",
  "langchain-community>=0.0.27",
  "html2text",
  "isatools",
  "llama_index",
  "langchain-experimental",
  "llama-index-readers-papers",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aria_agents*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "aria_agents = aria_agents.__main__:main",
]
build-backend = "setuptools.build_meta"
