[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "aria-agents"
version = "0.1.0"
readme = "README.md"
description = "Empowering autonomous scientific discovery."
dependencies = [
  "schema-agents==0.1.61",
  "httpx==0.28.1",
  "hypha==0.20.47.post1",
  "hypha-rpc==0.20.47",
  "aiofiles==23.2.1",
  "pandas==1.5.3",
  "setuptools==70.0.0",
  "llama_index==0.12.1",
  "llama-index-readers-papers==0.3.0",
  "pandasai==2.3.0",
  "botocore==1.36.3",
  "aiobotocore==2.19.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aria_agents*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "aria_agents = aria_agents.__main__:main",
]
build-backend = "setuptools.build_meta"