[build-system]
requires = ["setuptools>=65.0.0", "wheel"]

[project]
name = "aria-agents"
version = "0.1.0"
readme = "README.md"
description = "Empowering autonomous scientific discovery."
dependencies = [
  "schema-agents>=0.1.0,<0.2.0",
  "httpx>=0.24.0",
  "hypha>=0.20.0,<0.21.0",
  "hypha-rpc>=0.20.0,<0.21.0",
  "aiofiles>=23.0.0",
  "pandas>=1.5.0",
  "setuptools>=65.0.0",
  "pandasai>=2.0.0",
  "botocore>=1.31.0",
  "aiobotocore>=2.5.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aria_agents*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "aria_agents = aria_agents.__main__:main",
]
build-backend = "setuptools.build_meta"