[metadata]
name = aria-agents
version = 0.1.0
description = Empowering autonomous scientific discovery.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
    aria_agents = aria_agents.__main__:main

[options.package_data]
* = *.txt, *.rst, *.md